--- a/source/stylesheets/screen.scss
+++ b/source/stylesheets/screen.scss
@@ -17,7 +17,7 @@
 // vendor CSS libraries
 //-----------------------------
 
-@import "vendor/normalize";
+@import "vendor/reset";
 
 // base element styles
 //-----------------------------
